--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-accelerate==0.30.1
-datasets==2.19.2
-diffusers==0.29.2
-huggingface-hub==0.23.2
-torch==2.1.2+cpu
-torchvision==0.16.2+cpu
+diffusers[training]
+datasets
+torch
+PIL
+torchvision
+accelerate
+huggingface_hub
+
